Store results in a new CSV file

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "async": "^3.2.4",
     "csv-parser": "^3.0.0",
+    "csv-writer": "^1.6.0",
     "puppeteer": "^19.7.5",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2"
