--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "async": "^3.2.4",
     "csv-parser": "^3.0.0",
     "csv-writer": "^1.6.0",
+    "google-auth-library": "^8.8.0",
+    "googleapis": "^118.0.0",
     "puppeteer": "^19.7.5",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2"
